--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="container-fluid">
           <div class="main-header__content">
             <div class="main-header__right">
-              <img src="images/logo/Logo.png" class="main-header__logo" alt="لوگوی سبزلرن" />
+              <img src="images/logo/Logo.png" class="main-header__logo img-thumbnail" style="width: 50px;" alt="لوگو" />
 
               <ul class="main-header__menu">
                 <li class="main-header__item">
@@ -67,69 +67,73 @@
 
                 <li class="main-header__item">
                   <a href="#" class="main-header__link">فرانت اند
-                    <ul class="main-header__dropwodn">
+                    <i class="fas fa-angle-down main-header__link-icon"></i>
+                    <ul class="main-header__dropdown">
                       <li class="main-header__dropdown-item">
-                        <a href="#" class="main-header__dropwodn-link">آموزش Html</a>
+                        <a href="#" class="main-header__dropdown-link">آموزش Html</a>
                       </li>
                       <li class="main-header__dropdown-item">
-                        <a href="#" class="main-header__dropwodn-link">آموزش Css</a>
+                        <a href="#" class="main-header__dropdown-link">آموزش Css</a>
                       </li>
                       <li class="main-header__dropdown-item">
-                        <a href="#" class="main-header__dropwodn-link">آموزش جاوا اسکریپت</a>
+                        <a href="#" class="main-header__dropdown-link">آموزش جاوا اسکریپت</a>
                       </li>
                       <li class="main-header__dropdown-item">
-                        <a href="#" class="main-header__dropwodn-link">آموزش FlexBox</a>
+                        <a href="#" class="main-header__dropdown-link">آموزش FlexBox</a>
                       </li>
                       <li class="main-header__dropdown-item">
-                        <a href="#" class="main-header__dropwodn-link">آموزش جامع ری‌اکت</a>
+                        <a href="#" class="main-header__dropdown-link">آموزش جامع ری‌اکت</a>
                       </li>
                     </ul>
                   </a>
                 </li>
                 <li class="main-header__item">
                   <a href="#" class="main-header__link">امنیت
-                    <ul class="main-header__dropwodn">
+                    <i class="fas fa-angle-down main-header__link-icon"></i>
+                    <ul class="main-header__dropdown">
                       <li class="main-header__dropdown-item">
-                        <a href="#" class="main-header__dropwodn-link">آموزش کالی لینوکس</a>
+                        <a href="#" class="main-header__dropdown-link">آموزش کالی لینوکس</a>
                       </li>
                       <li class="main-header__dropdown-item">
-                        <a href="#" class="main-header__dropwodn-link">آموزش پایتون سیاه</a>
+                        <a href="#" class="main-header__dropdown-link">آموزش پایتون سیاه</a>
                       </li>
                       <li class="main-header__dropdown-item">
-                        <a href="#" class="main-header__dropwodn-link">آموزش جاوا اسکریپت سیاه</a>
+                        <a href="#" class="main-header__dropdown-link">آموزش جاوا اسکریپت سیاه</a>
                       </li>
                       <li class="main-header__dropdown-item">
-                        <a href="#" class="main-header__dropwodn-link">آموزش شبکه</a>
+                        <a href="#" class="main-header__dropdown-link">آموزش شبکه</a>
                       </li>
                     </ul>
                   </a>
                 </li>
                 <li class="main-header__item">
                   <a href="#" class="main-header__link">مقالات
-                    <ul class="main-header__dropwodn">
+                    <i class="fas fa-angle-down main-header__link-icon"></i>
+                    <ul class="main-header__dropdown">
                       <li class="main-header__dropdown-item">
-                        <a href="#" class="main-header__dropwodn-link">توسعه وب</a>
+                        <a href="#" class="main-header__dropdown-link">توسعه وب</a>
                       </li>
                       <li class="main-header__dropdown-item">
-                        <a href="#" class="main-header__dropwodn-link">جاوا اسکریپت</a>
+                        <a href="#" class="main-header__dropdown-link">جاوا اسکریپت</a>
                       </li>
                       <li class="main-header__dropdown-item">
-                        <a href="#" class="main-header__dropwodn-link">فرانت اند</a>
+                        <a href="#" class="main-header__dropdown-link">فرانت اند</a>
                       </li>
                     </ul>
                   </a>
                 </li>
                 <li class="main-header__item">
                   <a href="#" class="main-header__link">پایتون
-                    <ul class="main-header__dropwodn">
+                    <i class="fas fa-angle-down main-header__link-icon"></i>
+                    <ul class="main-header__dropdown">
                       <li class="main-header__dropdown-item">
-                        <a href="#" class="main-header__dropwodn-link">دوره متخصص پایتون</a>
+                        <a href="#" class="main-header__dropdown-link">دوره متخصص پایتون</a>
                       </li>
                       <li class="main-header__dropdown-item">
-                        <a href="#" class="main-header__dropwodn-link">دوره هوش مصنوعی با پایتون</a>
+                        <a href="#" class="main-header__dropdown-link">دوره هوش مصنوعی با پایتون</a>
                       </li>
                       <li class="main-header__dropdown-item">
-                        <a href="#" class="main-header__dropwodn-link">دوره متخصص جنگو</a>
+                        <a href="#" class="main-header__dropdown-link">دوره متخصص جنگو</a>
                       </li>
                     </ul>
                   </a>
