--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>تمرین | صفحه اصلی</title>
+    <title>sabzlearn clone | Home page</title>
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="vendor/FontAwesome5/all.min.css" />
     <link rel="stylesheet" href="css/index.css" />
@@ -58,7 +58,7 @@
         <div class="container-fluid">
           <div class="main-header__content">
             <div class="main-header__right">
-              <img src="images/logo/Logo.png" class="main-header__logo img-thumbnail" style="width: 50px;" alt="لوگو" />
+              <img src="images/logo/Logo.png" class="main-header__logo img-thumbnail"  alt="لوگو" />
 
               <ul class="main-header__menu">
                 <li class="main-header__item">
@@ -152,7 +152,7 @@
                 <i class="fas fa-shopping-cart main-header__cart-icon"></i>
               </a>
               <a href="#" class="main-header__profile">
-                <span class="main-header__profile-text">محمد</span>
+                <span class="main-header__profile-text">محمدرضا محمدی</span>
               </a>
             </div>
           </div>
