styling courses header

--- a/index.html
+++ b/index.html
@@ -272,20 +272,20 @@
 
             <div class="landing-status__item">
               <img
-              src="images/svgs/book-min.webp"
-              class="size-10 sm:size-16 lg:size-20 mb-2.5"
-              alt="book"
-            />
+                src="images/svgs/book-min.webp"
+                class="size-10 sm:size-16 lg:size-20 mb-2.5"
+                alt="book"
+              />
               <span class="landing-status__count">77</span>
               <span class="landing-status__text">دوره آموزشی </span>
             </div>
 
             <div class="landing-status__item">
               <img
-              src="images/svgs/clock-min.webp"
-              class="size-10 sm:size-16 lg:size-20 mb-2.5"
-              alt="clock"
-            />
+                src="images/svgs/clock-min.webp"
+                class="size-10 sm:size-16 lg:size-20 mb-2.5"
+                alt="clock"
+              />
               <span class="landing-status__count">1598</span>
               <span class="landing-status__text">ساعت آموزش </span>
             </div>
@@ -301,7 +301,7 @@
       <div class="container">
         <div class="courses-header">
           <div class="courses-header__right">
-            <span class="courses-header__title">جدیدترین دوره ها</span>
+            <span class="courses-header__title title">جدیدترین دوره ها</span>
             <span class="courses-header__text"
               >سکوی پرتاپ شما به سمت موفقیت</span
             >
