--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
         <div class="courses-content">
           <div class="container">
             <div class="row">
-              <div class="col-4">
+              <div class="col-3">
                 <div class="course-box">
                   <a href="#">
                     <img src="images/courses/IMAGE-1403-02-20-17_14_44_11zon-768x432.webp" alt="Course img" class="course-box__img img-fluid" />
@@ -326,7 +326,7 @@
 
                     <div class="course-box__rating-teacher">
                       <div class="course-box__teacher">
-                        <i class="fas fa-user course-box__teacher-icon"></i>
+                        <i class="fas fa-chalkboard-teacher course-box__teacher-icon"></i>
                         <a href="#" class="course-box__teacher-link">رضا دولتی</a>
                       </div>
                       <div class="course-box__rating">
@@ -356,7 +356,7 @@
 
                 </div>
               </div>
-              <div class="col-4">
+              <div class="col-3">
                 <div class="course-box">
                   <a href="#">
                     <img src="images/courses/Course-thumbnail-Algorithm-1-768x432.webp" alt="Course img" class="course-box__img img-fluid" />
@@ -366,7 +366,7 @@
 
                     <div class="course-box__rating-teacher">
                       <div class="course-box__teacher">
-                        <i class="fas fa-user course-box__teacher-icon"></i>
+                        <i class="fas fa-chalkboard-teacher course-box__teacher-icon"></i>
                         <a href="#" class="course-box__teacher-link">رضا دولتی</a>
                       </div>
                       <div class="course-box__rating">
@@ -396,7 +396,7 @@
 
                 </div>
               </div>
-              <div class="col-4">
+              <div class="col-3">
                 <div class="course-box">
                   <a href="#">
                     <img src="images/courses/Course-thumbnail-Algorithm-1-768x432.webp" alt="Course img" class="course-box__img img-fluid" />
@@ -406,7 +406,7 @@
 
                     <div class="course-box__rating-teacher">
                       <div class="course-box__teacher">
-                        <i class="fas fa-user course-box__teacher-icon"></i>
+                        <i class="fas fa-chalkboard-teacher course-box__teacher-icon"></i>
                         <a href="#" class="course-box__teacher-link">رضا دولتی</a>
                       </div>
                       <div class="course-box__rating">
@@ -436,6 +436,44 @@
 
                 </div>
               </div>
+              <div class="col-3">
+                <div class="course-box">
+                  <a href="#">
+                    <img src="images/courses/IMAGE-1403-02-20-17_14_44_11zon-768x432.webp" alt="Course img" class="course-box__img img-fluid" />
+                  </a>
+                  <div class="course-box__main">
+                    <a href="#" class="course-box__title">دوره پروژه محور متخصص جنگو</a>
+
+                    <div class="course-box__rating-teacher">
+                      <div class="course-box__teacher">
+                        <i class="fas fa-chalkboard-teacher course-box__teacher-icon"></i>
+                        <a href="#" class="course-box__teacher-link">رضا دولتی</a>
+                      </div>
+                      <div class="course-box__rating">
+                        <img src="images/svgs/star.svg" alt="rating" class="course-box__start">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__start">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__start">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__start">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__start">
+                      </div>
+                    </div>
+
+                    <div class="course-box__status">
+                      <div class="course-box__users">
+                        <i class="fas fa-users course-box__users"></i>
+                        <span class="course-box__users-text">500</span>
+                      </div>
+                      <span class="course-box__price">1,000,000</span>
+                    </div>
+                  </div>
+
+                  <div class="course-box__footer">
+                    <a href="#" class="course-box__footer-link">
+                      مشاهده اطلاعات
+                      <i class="fas fa-arrow-left course-box__footer-icon"></i>
+                    </a>
+                  </div>
+                </div>
             </div>
           </div>
         </div>
