--- a/index.html
+++ b/index.html
@@ -330,11 +330,11 @@
                         <a href="#" class="course-box__teacher-link">رضا دولتی</a>
                       </div>
                       <div class="course-box__rating">
-                        <img src="images/svgs/star.svg" alt="rating" class="course-box__start">
-                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__start">
-                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__start">
-                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__start">
-                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__start">
+                        <img src="images/svgs/star.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
                       </div>
                     </div>
 
@@ -370,11 +370,11 @@
                         <a href="#" class="course-box__teacher-link">رضا دولتی</a>
                       </div>
                       <div class="course-box__rating">
-                        <img src="images/svgs/star.svg" alt="rating" class="course-box__start">
-                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__start">
-                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__start">
-                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__start">
-                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__start">
+                        <img src="images/svgs/star.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
                       </div>
                     </div>
 
@@ -410,11 +410,11 @@
                         <a href="#" class="course-box__teacher-link">رضا دولتی</a>
                       </div>
                       <div class="course-box__rating">
-                        <img src="images/svgs/star.svg" alt="rating" class="course-box__start">
-                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__start">
-                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__start">
-                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__start">
-                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__start">
+                        <img src="images/svgs/star.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
                       </div>
                     </div>
 
@@ -450,11 +450,11 @@
                         <a href="#" class="course-box__teacher-link">رضا دولتی</a>
                       </div>
                       <div class="course-box__rating">
-                        <img src="images/svgs/star.svg" alt="rating" class="course-box__start">
-                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__start">
-                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__start">
-                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__start">
-                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__start">
+                        <img src="images/svgs/star.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
                       </div>
                     </div>
 
