--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="vendor/FontAwesome5/all.min.css" />
     <link rel="stylesheet" href="vendor/Bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="vendor/SwiperSlider/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
@@ -547,8 +548,371 @@
       </div>
     </div>
     <!-- Finish About Us -->
+
+
+
+    <!-- Start Popular Courses -->
+
+    <div class="popular">
+      <div class="container">
+        <div class="popular__header">
+          <span class="popular__title title">محبوب ترین دوره ها</span>
+        </div>
+
+        <div class="popular__slider">
+          <div class="swiper swiper-container">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div class="course-box">
+                  <a href="#">
+                    <img src="images/courses/English22-1-768x432.webp" alt="Course img" class="course-box__img"/>
+                  </a>
+                  <div class="course-box__main">
+                    <a href="#" class="course-box__title">دوره پروژه محور متخصص جنگو</a>
+
+                    <div class="course-box__rating-teacher">
+                      <div class="course-box__teacher">
+                        <i class="fas fa-chalkboard-teacher course-box__teacher-icon"></i>
+                        <a href="#" class="course-box__teacher-link">رضا دولتی</a>
+                      </div>
+                      <div class="course-box__rating">
+                        <img src="images/svgs/star.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                      </div>
+                    </div>
+
+                    <div class="course-box__status">
+                      <div class="course-box__users">
+                        <i class="fas fa-users course-box__users-icon"></i>
+                        <span class="course-box__users-text">500</span>
+                      </div>
+                      <span class="course-box__price">1,000,000</span>
+                    </div>
+                  </div>
+
+                  <div class="course-box__footer">
+                    <a href="#" class="course-box__footer-link">
+                      مشاهده اطلاعات
+                      <i class="fas fa-arrow-left course-box__footer-icon"></i>
+                    </a>
+                  </div>
+
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="course-box">
+                  <a href="#">
+                    <img src="images/courses/IMAGE-1403-02-20-17_59_09_11zon-768x432.webp" alt="Course img" class="course-box__img" />
+                  </a>
+                  <div class="course-box__main">
+                    <a href="#" class="course-box__title">دوره پروژه محور متخصص جنگو</a>
+
+                    <div class="course-box__rating-teacher">
+                      <div class="course-box__teacher">
+                        <i class="fas fa-chalkboard-teacher course-box__teacher-icon"></i>
+                        <a href="#" class="course-box__teacher-link">رضا دولتی</a>
+                      </div>
+                      <div class="course-box__rating">
+                        <img src="images/svgs/star.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                      </div>
+                    </div>
+
+                    <div class="course-box__status">
+                      <div class="course-box__users">
+                        <i class="fas fa-users course-box__users-icon"></i>
+                        <span class="course-box__users-text">500</span>
+                      </div>
+                      <span class="course-box__price">1,000,000</span>
+                    </div>
+                  </div>
+
+                  <div class="course-box__footer">
+                    <a href="#" class="course-box__footer-link">
+                      مشاهده اطلاعات
+                      <i class="fas fa-arrow-left course-box__footer-icon"></i>
+                    </a>
+                  </div>
+
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="course-box">
+                  <a href="#">
+                    <img src="images/courses/ezgif.com-jpg-to-webp-converted-32-1-768x432.webp" alt="Course img" class="course-box__img" />
+                  </a>
+                  <div class="course-box__main">
+                    <a href="#" class="course-box__title">دوره پروژه محور متخصص جنگو</a>
+
+                    <div class="course-box__rating-teacher">
+                      <div class="course-box__teacher">
+                        <i class="fas fa-chalkboard-teacher course-box__teacher-icon"></i>
+                        <a href="#" class="course-box__teacher-link">رضا دولتی</a>
+                      </div>
+                      <div class="course-box__rating">
+                        <img src="images/svgs/star.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                      </div>
+                    </div>
+
+                    <div class="course-box__status">
+                      <div class="course-box__users">
+                        <i class="fas fa-users course-box__users-icon"></i>
+                        <span class="course-box__users-text">500</span>
+                      </div>
+                      <span class="course-box__price">1,000,000</span>
+                    </div>
+                  </div>
+
+                  <div class="course-box__footer">
+                    <a href="#" class="course-box__footer-link">
+                      مشاهده اطلاعات
+                      <i class="fas fa-arrow-left course-box__footer-icon"></i>
+                    </a>
+                  </div>
+
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="course-box">
+                  <a href="#">
+                    <img src="images/courses/ezgif.com-jpg-to-webp-converted-19-1-768x432.webp" alt="Course img" class="course-box__img" />
+                  </a>
+                  <div class="course-box__main">
+                    <a href="#" class="course-box__title">دوره پروژه محور متخصص جنگو</a>
+
+                    <div class="course-box__rating-teacher">
+                      <div class="course-box__teacher">
+                        <i class="fas fa-chalkboard-teacher course-box__teacher-icon"></i>
+                        <a href="#" class="course-box__teacher-link">رضا دولتی</a>
+                      </div>
+                      <div class="course-box__rating">
+                        <img src="images/svgs/star.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                      </div>
+                    </div>
+
+                    <div class="course-box__status">
+                      <div class="course-box__users">
+                        <i class="fas fa-users course-box__users-icon"></i>
+                        <span class="course-box__users-text">500</span>
+                      </div>
+                      <span class="course-box__price">1,000,000</span>
+                    </div>
+                  </div>
+
+                  <div class="course-box__footer">
+                    <a href="#" class="course-box__footer-link">
+                      مشاهده اطلاعات
+                      <i class="fas fa-arrow-left course-box__footer-icon"></i>
+                    </a>
+                  </div>
+
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Finish Popular Courses -->
+
+    <!-- Start Pre-sell Courses -->
+
+    <div class="presell">
+      <div class="container">
+        <div class="presell__header">
+          <span class="presell__title title">دوره های در حال پیش فروش</span>
+        </div>
+
+        <div class="presell__slider">
+          <div class="swiper swiper-container">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div class="course-box">
+                  <a href="#">
+                    <img src="images/courses/php-ex-768x432.webp" alt="Course img" class="course-box__img" />
+                  </a>
+                  <div class="course-box__main">
+                    <a href="#" class="course-box__title">دوره پروژه محور متخصص جنگو</a>
+
+                    <div class="course-box__rating-teacher">
+                      <div class="course-box__teacher">
+                        <i class="fas fa-chalkboard-teacher course-box__teacher-icon"></i>
+                        <a href="#" class="course-box__teacher-link">رضا دولتی</a>
+                      </div>
+                      <div class="course-box__rating">
+                        <img src="images/svgs/star.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                      </div>
+                    </div>
+
+                    <div class="course-box__status">
+                      <div class="course-box__users">
+                        <i class="fas fa-users course-box__users-icon"></i>
+                        <span class="course-box__users-text">500</span>
+                      </div>
+                      <span class="course-box__price">1,000,000</span>
+                    </div>
+                  </div>
+
+                  <div class="course-box__footer">
+                    <a href="#" class="course-box__footer-link">
+                      مشاهده اطلاعات
+                      <i class="fas fa-arrow-left course-box__footer-icon"></i>
+                    </a>
+                  </div>
+
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="course-box">
+                  <a href="#">
+                    <img src="images/courses/js22-min-768x432.webp" alt="Course img" class="course-box__img" />
+                  </a>
+                  <div class="course-box__main">
+                    <a href="#" class="course-box__title">دوره پروژه محور متخصص جنگو</a>
+
+                    <div class="course-box__rating-teacher">
+                      <div class="course-box__teacher">
+                        <i class="fas fa-chalkboard-teacher course-box__teacher-icon"></i>
+                        <a href="#" class="course-box__teacher-link">رضا دولتی</a>
+                      </div>
+                      <div class="course-box__rating">
+                        <img src="images/svgs/star.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                      </div>
+                    </div>
+
+                    <div class="course-box__status">
+                      <div class="course-box__users">
+                        <i class="fas fa-users course-box__users-icon"></i>
+                        <span class="course-box__users-text">500</span>
+                      </div>
+                      <span class="course-box__price">1,000,000</span>
+                    </div>
+                  </div>
+
+                  <div class="course-box__footer">
+                    <a href="#" class="course-box__footer-link">
+                      مشاهده اطلاعات
+                      <i class="fas fa-arrow-left course-box__footer-icon"></i>
+                    </a>
+                  </div>
+
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="course-box">
+                  <a href="#">
+                    <img src="images/courses/ezgif.com-jpg-to-webp-converted-30-1-768x432.webp" alt="Course img" class="course-box__img" />
+                  </a>
+                  <div class="course-box__main">
+                    <a href="#" class="course-box__title">دوره پروژه محور متخصص جنگو</a>
+
+                    <div class="course-box__rating-teacher">
+                      <div class="course-box__teacher">
+                        <i class="fas fa-chalkboard-teacher course-box__teacher-icon"></i>
+                        <a href="#" class="course-box__teacher-link">رضا دولتی</a>
+                      </div>
+                      <div class="course-box__rating">
+                        <img src="images/svgs/star.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                      </div>
+                    </div>
+
+                    <div class="course-box__status">
+                      <div class="course-box__users">
+                        <i class="fas fa-users course-box__users-icon"></i>
+                        <span class="course-box__users-text">500</span>
+                      </div>
+                      <span class="course-box__price">1,000,000</span>
+                    </div>
+                  </div>
+
+                  <div class="course-box__footer">
+                    <a href="#" class="course-box__footer-link">
+                      مشاهده اطلاعات
+                      <i class="fas fa-arrow-left course-box__footer-icon"></i>
+                    </a>
+                  </div>
+
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="course-box">
+                  <a href="#">
+                    <img src="images/courses/youtuber.png" alt="Course img" class="course-box__img" />
+                  </a>
+                  <div class="course-box__main">
+                    <a href="#" class="course-box__title">دوره پروژه محور متخصص جنگو</a>
+
+                    <div class="course-box__rating-teacher">
+                      <div class="course-box__teacher">
+                        <i class="fas fa-chalkboard-teacher course-box__teacher-icon"></i>
+                        <a href="#" class="course-box__teacher-link">رضا دولتی</a>
+                      </div>
+                      <div class="course-box__rating">
+                        <img src="images/svgs/star.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                        <img src="images/svgs/star_fill.svg" alt="rating" class="course-box__star">
+                      </div>
+                    </div>
+
+                    <div class="course-box__status">
+                      <div class="course-box__users">
+                        <i class="fas fa-users course-box__users-icon"></i>
+                        <span class="course-box__users-text">500</span>
+                      </div>
+                      <span class="course-box__price">1,000,000</span>
+                    </div>
+                  </div>
+
+                  <div class="course-box__footer">
+                    <a href="#" class="course-box__footer-link">
+                      مشاهده اطلاعات
+                      <i class="fas fa-arrow-left course-box__footer-icon"></i>
+                    </a>
+                  </div>
+
+                </div>
+              </div>
+            </div>
+            <div class="swiper-scrollbar"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Finish Pre-sell Courses -->
     
     <script src="vendor/FontAwesome5/all.min.js"></script>
     <script src="vendor/Bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="vendor/SwiperSlider/swiper-bundle.min.js"></script>
+    <script src="js/slider.js"></script>
   </body>
 </html>
