create course details page

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     </li>
 
                     <li class="main-header__item">
-                      <a href="#" class="main-header__link"
+                      <a href="./category.html" class="main-header__link"
                         >فرانت اند
                         <i class="fas fa-angle-down main-header__link-icon"></i>
                         <ul class="main-header__dropdown">
@@ -153,7 +153,7 @@
                       </a>
                     </li>
                     <li class="main-header__item">
-                      <a href="#" class="main-header__link"
+                      <a href="./course.html" class="main-header__link"
                         >امنیت
                         <i class="fas fa-angle-down main-header__link-icon"></i>
                         <ul class="main-header__dropdown">
@@ -487,7 +487,7 @@
     <div class="about-us">
       <div class="container">
         <div class="about-us__header">
-          <span class="about-us__title title">ما چه کمکی بهتون میکنیم؟</span>
+          <span class="about-us__title title" style="max-width: 250px;">ما چه کمکی بهتون میکنیم؟</span>
           <span class="about-us__subtitle">از اونجایی که آکادمی آموزشی سبزلرن یک آکادمی خصوصی هست</span>
         </div>
 
@@ -560,7 +560,7 @@
         </div>
 
         <div class="popular__slider">
-          <div class="swiper swiper-container">
+          <div class="swiper swiper-container-1">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div class="course-box">
@@ -723,6 +723,8 @@
                 </div>
               </div>
             </div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
           </div>
         </div>
       </div>
@@ -739,7 +741,7 @@
         </div>
 
         <div class="presell__slider">
-          <div class="swiper swiper-container">
+          <div class="swiper swiper-container-2">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div class="course-box">
@@ -902,7 +904,8 @@
                 </div>
               </div>
             </div>
-            <div class="swiper-scrollbar"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
           </div>
         </div>
       </div>
