create blogs detail page

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                       </a>
                     </li>
                     <li class="main-header__item">
-                      <a href="#" class="main-header__link"
+                      <a href="./blog.html" class="main-header__link"
                         >مقالات
                         <i class="fas fa-angle-down main-header__link-icon"></i>
                         <ul class="main-header__dropdown">
@@ -937,7 +937,7 @@
                   <div class="article-card">
                     <div class="article-card__header">
                       <a href="#" class="article-card__link-img">
-                        <img src="./images/blogs/en-768x403.jpg" class="article-card__img" alt="Article Cover" />
+                        <img src="./images/blog/en-768x403.jpg" class="article-card__img" alt="Article Cover" />
                       </a>
                     </div>
                     <div class="article-card__content">
@@ -955,7 +955,7 @@
                   <div class="article-card">
                     <div class="article-card__header">
                       <a href="#" class="article-card__link-img">
-                        <img src="./images/blogs/en-768x403.jpg" class="article-card__img" alt="Article Cover" />
+                        <img src="./images/blog/en-768x403.jpg" class="article-card__img" alt="Article Cover" />
                       </a>
                     </div>
                     <div class="article-card__content">
@@ -973,7 +973,7 @@
                   <div class="article-card">
                     <div class="article-card__header">
                       <a href="#" class="article-card__link-img">
-                        <img src="images/blogs/mobtadi-1-768x403.webp" class="article-card__img" alt="Article Cover" />
+                        <img src="images/blog/mobtadi-1-768x403.webp" class="article-card__img" alt="Article Cover" />
                       </a>
                     </div>
                     <div class="article-card__content">
@@ -991,7 +991,7 @@
                   <div class="article-card">
                     <div class="article-card__header">
                       <a href="#" class="article-card__link-img">
-                        <img src="images/blogs/image-2-1-768x403.webp" class="article-card__img" alt="Article Cover" />
+                        <img src="images/blog/image-2-1-768x403.webp" class="article-card__img" alt="Article Cover" />
                       </a>
                     </div>
                     <div class="article-card__content">
