end of blog page

--- a/blog.html
+++ b/blog.html
@@ -40,9 +40,6 @@
                 <li class="top-bar__item">
                   <a href="#" class="top-bar__link">آموزش ری‌اکت</a>
                 </li>
-                <li class="top-bar__item">
-                  <a href="#" class="top-bar__link">20,000 تومان</a>
-                </li>
               </ul>
             </div>
             <div class="top-bar__left">
@@ -306,7 +303,7 @@
                   </ul>
                 </div>
 
-                <img src="images/blog/2.jpg" alt="Article Image" class="article__seconadary-banner" />
+                <img src="images/blog/2.jpg" alt="Article Image" class="article__secondary-banner" />
                 <div class="article-section">
                   <h2 class="article-section__title">
                     معرفی بهترین سایت ‌های آموزش جاوا اسکریپت:
@@ -379,12 +376,14 @@
                   دیدگاهتان را بنویسید
                 </span>
                 <span class="comments__text">
+                  
+                  با عنوان   
                   <a href="#">
-                    با عنوان محمد  
-                  وارد شده اید.
+                    محمد
                   </a>
-                   <a href="#">خارج میشوید? </a>
-                  بخش های موردنیاز علامت گذاری شده اند *
+                  وارد شده اید.
+                   <a href="#">خارج میشوید?</a>
+                   بخش های موردنیاز علامت گذاری شده اند *
                 </span>
                 <div class="comments_content">
                   <span class="comments__content-title">دیدگاه *</span>
@@ -655,7 +654,6 @@
           </span>
         </div>
       </footer>
-  
       <!-- Finish Footer -->
     
 
