finish login page

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                   <a href="#" class="main-header__cart-btn">
                     <i class="fas fa-shopping-cart main-header__cart-icon"></i>
                   </a>
-                  <a href="#" class="main-header__profile">
+                  <a href="./login.html" class="main-header__profile">
                     <span class="main-header__profile-text">محمدرضا محمدی</span>
                   </a>
                 </div>
