--- a/blog.html
+++ b/blog.html
@@ -203,7 +203,7 @@
                 <i class="fas fa-shopping-cart main-header__cart-icon"></i>
               </a>
               <a href="#" class="main-header__profile">
-                <span class="main-header__profile-text">محمدامین سعیدی راد</span>
+                <span class="main-header__profile-text">محمدرضا محمدی</span>
               </a>
             </div>
           </div>
