add typeWriter effect

--- a/index.html
+++ b/index.html
@@ -1118,5 +1118,6 @@
     <script src="vendor/Bootstrap/bootstrap.bundle.min.js"></script>
     <script src="vendor/SwiperSlider/swiper-bundle.min.js"></script>
     <script src="js/slider.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
